segunda version de landing page noche

--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
         <img src="img/illustration-1.svg" alt="" />
       </div>
       <!--end seccion1-->
+      <div class="seccion2">
+        <div class="contenido2">
+          <h3>Stay productive, wherever you are</h3>
+          <p>
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p>
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required
+          </p>
+          <div class="ancla2">
+            <a href="#">
+              See how Fylo works
+              <img src="img/icon-arrow.svg" alt="" />
+            </a>
+          </div>
+
+          <div class="card2">
+            <img src="img/icon-quotes.svg" alt="" />
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="contacto2">
+              <img src="img/avatar-testimonial.jpg" alt="" />
+              <p>Kyle Burton <br /><span>Founder & CEO, Huddle</span></p>
+            </div>
+          </div>
+          <!--end card-->
+        </div>
+        <img src="img/illustration-2.svg" alt="" />
+      </div>
+      <!--end seccion2-->
     </div>
+    <!--end container-->
   </body>
 </html>
